Update index.html imageAktuell

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <main class="exhibit">
       <div class="image-container">
-        <img src="images/aktuell.jpg" alt="Aktuell" />
+        <img src="aktuell.jpg" alt="Aktuell" />
         <div class="overlay-text">
           <p><em>How many more times</em></p>
           <h1>Lulu Chiadmi</h1>
