Update index.html TextColorToBlack

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Gallery - Charlie Petel</title>
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <style>
       * {
         margin: 0;
@@ -96,10 +96,6 @@
       }
 
       .overlay-text {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         color: white;
         text-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
       }
@@ -142,9 +138,7 @@
       <div class="image-container">
         <img src="aktuell.jpg" alt="Aktuell" />
         <div class="overlay-text">
-          <p><em>How many more times</em></p>
-          <h1>Lulu Chiadmi</h1>
-          <span>20.06 – 15.07.2025</span>
+          <p><em>Hier entsteht die neue Website der Galerie Charlie Petel</em></p>
         </div>
         <a href="https://instagram.com/charliepetel" target="_blank" rel="noopener noreferrer">
           <i class="fa fa-instagram" style="font-size: 25px; color: black"></i
