--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 
       .image-container img {
         width: 940px;
-        height: 635px;
+        height: 1392px;
       }
 
       .overlay-text {
-        color: white;
+        color: black;
         text-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
       }
 
@@ -106,15 +106,6 @@
         font-size: 1.4rem;
       }
 
-      .overlay-text h1 {
-        margin: 0.5rem 0;
-        font-size: 2rem;
-      }
-
-      .overlay-text span {
-        font-size: 0.9rem;
-        letter-spacing: 1px;
-      }
 
       footer {
         text-align: center;
