Update index.html TextMove

--- a/index.html
+++ b/index.html
@@ -91,11 +91,14 @@
       }
 
       .image-container img {
-        width: 940px;
-        height: 1392px;
+        width: 540px;
+        height: 800px;
       }
 
       .overlay-text {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -50%);
         color: black;
         text-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
       }
