Update index.html TextToEnglish

--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
     </header>
 
     <main class="exhibit">
+              <div class="overlay-text">
+          <p><em>The new website for the Charlie Petel Gallery is currently under construction</em></p>
+        </div>
       <div class="image-container">
         <img src="aktuell.jpg" alt="Aktuell" />
-        <div class="overlay-text">
-          <p><em>Hier entsteht die neue Website der Galerie Charlie Petel</em></p>
-        </div>
         <a href="https://instagram.com/charliepetel" target="_blank" rel="noopener noreferrer">
           <i class="fa fa-instagram" style="font-size: 25px; color: black"></i
         ></a>
