--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
         max-width: 900px;
       }
 
-      .image-container img {
-        width: 540px;
-        height: 800px;
+       .image-container img {
+        width: 100%;
+        height: auto;
+        max-width: 540px; /* optional, um nicht größer als Original zu werden */
       }
 
       .overlay-text {
